--- a/index.html
+++ b/index.html
@@ -198,12 +198,11 @@
                   <h3 class="title">Ігор Дем'яненко</h3>
                   <p class="text">Product Designer</p>
                   <ul class="list team-social">
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
@@ -211,36 +210,33 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -260,48 +256,45 @@
                   <h3 class="title">Ольга Рєпіна</h3>
                   <p class="text">Frontend Developer</p>
                   <ul class="list team-social">
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+
+                    <li class="team-social-items">
                       <a
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -321,48 +314,45 @@
                   <h3 class="title">Микола Тарасов</h3>
                   <p class="text">Marketing</p>
                   <ul class="list team-social">
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+
+                    <li class="team-social-items">
                       <a
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -382,48 +372,45 @@
                   <h3 class="title">Михайло Єрмаков</h3>
                   <p class="text">UI Designer</p>
                   <ul class="list team-social">
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+
+                    <li class="team-social-items">
                       <a
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="team-social-items">
                       <a
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
-                        class="team-icons-items"
                       >
                         <svg class="team-icons" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -443,42 +430,42 @@
           <ul class="clients-list list">
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-items">
               <a href="" class="clients-icons-items">
-                <svg class="team-icons" width="106" height="60">
+                <svg class="client-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
@@ -530,7 +517,7 @@
                 rel="noopener nofollow noreferrer"
                 class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -542,7 +529,7 @@
                 rel="noopener nofollow noreferrer"
                 class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -554,7 +541,7 @@
                 rel="noopener nofollow noreferrer"
                 class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -566,7 +553,7 @@
                 rel="noopener nofollow noreferrer"
                 class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
