--- a/portfolio.html
+++ b/portfolio.html
@@ -239,50 +239,50 @@
         <div class="footer-social">
           <p class="footer-text">приєднуйтесь</p>
           <ul class="list footer-social-list">
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://instagram.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://twitter.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://facebook.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://linkedin.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
-                <svg class="team-icons" width="20" height="20">
+                <svg class="footer-team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
